2013-09-11  Will Newton  <will.newton@linaro.org>

	[BZ #15855]
	* malloc/malloc.c (__libc_pvalloc): Check the value of bytes
	does not overflow.

2013-09-23  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15754]
	* elf/Makefile (tests): Add tst-ptrguard1.
	(tests-static): Add tst-ptrguard1-static.
	(tst-ptrguard1-ARGS): Define.
	(tst-ptrguard1-static-ARGS): Define.
	* elf/tst-ptrguard1.c: New file.
	* elf/tst-ptrguard1-static.c: New file.
	* sysdeps/x86_64/stackguard-macros.h: Define POINTER_CHK_GUARD.
	* sysdeps/i386/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc32/stackguard-macros.h: Likewise.
	* sysdeps/powerpc/powerpc64/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-32/stackguard-macros.h: Likewise.
	* sysdeps/s390/s390-64/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc32/stackguard-macros.h: Likewise.
	* sysdeps/sparc/sparc64/stackguard-macros.h: Likewise.

2013-09-23  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14547]
	* string/tst-strcoll-overflow.c: New test case.
	* string/Makefile (xtests): Add tst-strcoll-overflow.
	* string/strcoll_l.c (STRCOLL): Skip allocating memory for
	cache if string sizes may cause integer overflow.

	[BZ #14547]
	* string/strcoll_l.c (coll_seq): New members rule, idx,
	save_idx and back_us.
	(get_next_seq_nocache): New function.
	(do_compare_nocache): New function.
	(STRCOLL): Use get_next_seq_nocache and do_compare_nocache
	when malloc fails.

	* string/strcoll_l.c (coll_seq): New structure.
	(get_next_seq_cached): New function.
	(get_next_seq): New function.
	(do_compare): New function.
	(STRCOLL): Use GNU style definition.  Simplify implementation
	by using get_next_seq, get_next_seq_cached and do_compare.

2013-10-31  Andreas Schwab  <schwab@suse.de>

	[BZ# 15917]
	* stdio-common/vfscanf.c (_IO_vfwscanf): Handle leading '0' not
	followed by 'x' as part of digit sequence.
	* stdio-common/tst-sscanf.c (double_tests2): New tests.

2013-10-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
